--- a/index.html
+++ b/index.html
@@ -4,15 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Random Quotes</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div class="container">
       <h1>Random Quotes</h1>
-      <p id="quote">Click the button to get a random quote</p>
+      <p id="quote" class="quote">Click the button to get a random quote</p>
       <p id="quote-author">(author)</p>
       <button id="generate-btn" class="btn">Generate Quote</button>
+      <i id="toggle-favorite-btn" class="far fa-star star-icon"></i>
     </div>
+
+    <div class="favorites-container" id="favorites-container"></div>
     <script type="module" src="script.js"></script>
   </body>
 </html>
