--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
     </div>
 
     <div class="favorites-container" id="favorites-container"></div>
-    <script type="module" src="script.js"></script>
+    <script type="module" src="index.js"></script>
   </body>
 </html>
